@@ -8,13 +8,8 @@ use warnings;
 sub self_rs {
    my ($self) = @_;
 
-   my $src = $self->result_source;
-   my $rs = $src->resultset;
-   my $me = $rs->current_source_alias;
-   return $rs->search({
-          # perl, sometimes I hate your guts
-      map +( "$me.$_" => $self->get_column($_) ), $src->primary_columns
-   })
+   my $rs = $self->result_source->resultset;
+   return $rs->search($self->ident_condition)
 }
 
 1;
