@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Fix implementation of ::Row::SelfResultSet (fixes GH#34, thanks ribasushi for
+   the heads up!)
 
 2.023003  2014-07-21 21:22:27-05:00 America/Chicago
  - Fix ToJSON to use accessors if it needs to (Thanks Kevin Benson!)
